--- a/src/app/Pages/reports/reports.component.html
+++ b/src/app/Pages/reports/reports.component.html
@@ -49,7 +49,7 @@
   </div>
 
   <div class="buttonSend">
-    <button type="button" class="btn btn-success">Send Overview</button>
+    <button type="button" class="btn btn-success" (click)="sendEmail()">Send Overview</button>
   </div>
 
   
