--- a/src/app/Pages/configs/configs.component.html
+++ b/src/app/Pages/configs/configs.component.html
@@ -48,8 +48,8 @@
 
   <div class="navigation">
     <ul>
-      <li class="selected"><a routerLink="/Configs/NewConfig">Configs and edit</a></li>
-      <li><a routerLink="/Configs/NewConfig">New Config</a></li>
+      <li class="selected"><a>Configs and edit</a></li>
+      <li><a routerLink="/NewConfig">New Config</a></li>
     </ul>
   </div>
 
