--- a/src/app/Pages/configs/new-config/new-config.component.html
+++ b/src/app/Pages/configs/new-config/new-config.component.html
@@ -23,7 +23,7 @@
     <div class="content">
   
         <div class="EditLabel">
-            Config1 Edit
+           New Config
         </div>
   
         <table class="table table-borderless">
