--- a/src/app/Pages/groups/groups.component.html
+++ b/src/app/Pages/groups/groups.component.html
@@ -25,7 +25,6 @@
                   <tr>
                     <th>Remove</th>
                       <th>Name</th>
-                      <th>Status</th>
                       <th>Last Backup</th>
                       <th>Backup Status</th>
                   </tr>
@@ -37,11 +36,10 @@
                             <i class="bi bi-trash3"></i>
                         </button>
                       </td>
-                      <td><a routerLink="/Groups/Group1">{{item.groupName}}</a></td>
-                      <td>Online(6/10)</td>
-                      <td>9.3.2023 10:54</td>
-                      <td>Backups failed(2/10)</td>
-                    </tr>                    
+                      <td><a routerLink="/Groups/{{item.id}}">{{item.groupName}}</a></td>
+                      <td>{{item.lastBackup}}</td>
+                      <td>{{item.backupStatus}}</td>
+                    </tr>
               </tbody>                  
             </table>
       </div>
