--- a/src/app/Pages/admins/admin-config/admin-config.component.html
+++ b/src/app/Pages/admins/admin-config/admin-config.component.html
@@ -21,13 +21,13 @@
     <div class="content">
 
         <div class="EditLabel">
-            {{username}} Edit
+            {{admin.username}} Edit
         </div>
 
         <div class="AdminProperties">
           <div class="Username">
             <p>Name:</p>
-            <input type="text" name="Username_inputbox" [value]="username">
+            <input type="text" name="Username_inputbox" [value]="admin.username" #NewUsername>
           </div>
           <div class="Password">
             <p>Password:</p>
@@ -35,40 +35,40 @@
           </div>
           <div class="Email">
             <p>Email:</p>
-            <input type="text" name="Email" [value]="email">
+            <input type="text" name="Email" [value]="admin.email" #NewEmail>
           </div>
           <div class="Description">
             <p>Description:</p>
-            <input type="text" name="Description" [value]="description">
+            <input type="text" name="Description" [value]="admin.description" #NewDescription>
           </div>
         </div>
 
     <div class="Schedule">
-        <h3>Schedule:</h3>
-
-        <button type="button" class="btn btn-secondary Simple selected">Simple</button>
-        <button type="button" class="btn btn-secondary Advanced">Advanced</button>
+        <h1>Schedule:</h1>
 
         <div class="HHH">
         <h3>Every: </h3>
+
+        <div class="buttons">
+          <button type="button" class="btn btn-secondary week" (click)="setSchedule('0 0 * * MON')">Mon</button>
+          <button type="button" class="btn btn-secondary week" (click)="setSchedule('0 0 * * SUN')">Tue</button>
+          <button type="button" class="btn btn-secondary week" (click)="setSchedule('0 0 * * WED')">Wed</button>
+          <button type="button" class="btn btn-secondary week" (click)="setSchedule('0 0 * * THU')">Thu</button>
+          <button type="button" class="btn btn-secondary week" (click)="setSchedule('0 0 * * FRI')">Fri</button>
+          <button type="button" class="btn btn-secondary week" (click)="setSchedule('0 0 * * SAT')">Sat</button>
+          <button type="button" class="btn btn-secondary week" (click)="setSchedule('0 0 * * SUN')">Sun</button>
+        </div>
         
-      </div>
-      <div class="buttons">
-        <button type="button" class="btn btn-secondary week">Mon</button>
-        <button type="button" class="btn btn-secondary week">Tue</button>
-        <button type="button" class="btn btn-secondary week">Wed</button>
-        <button type="button" class="btn btn-secondary week">Thu</button>
-        <button type="button" class="btn btn-secondary week">Fri</button>
-        <button type="button" class="btn btn-secondary week">Sat</button>
-        <button type="button" class="btn btn-secondary week">Sun</button>
-      </div>
-      
+    
+    <div>
+      <h3 class="AdvancedSchedule"> 
+        Advanced:<input type="text" class = "ScheduleInput" #schedule value="{{admin.schedule}}">
+      </h3>
     </div>
     
-
     <div class="Changes">
-      <button type="button" class="btn btn-danger">Discard Changes</button>
-      <button type="button" class="btn btn-success" (click)="saveAdmin($event, NewPassword.value)">Save Changes</button>
+      <button type="button" class="btn btn-danger" (click)="refresh()">Discard Changes</button>
+      <button type="button" class="btn btn-success" (click)="saveAdmin(NewPassword.value, NewDescription.value, NewUsername.value, NewEmail.value)">Save Changes</button>
     </div>
     </div>
     
