--- a/src/app/Pages/admins/admin-config/admin-config.component.scss
+++ b/src/app/Pages/admins/admin-config/admin-config.component.scss
@@ -25,6 +25,33 @@
     cursor: pointer;
 }
 
+.Schedule{
+    margin-left: 1028px;
+    margin-top: -325px;
+    height: 300px;
+    h1
+    {
+        font-weight: 600;
+        margin-left: 420px;
+    }
+    .buttons
+    {
+      margin-top: 20px;   
+    }
+}
+
+.ScheduleInput
+{
+    width: 300px;
+    padding: 5px;
+    margin-left: 130px;    
+}
+
+.AdvancedSchedule{
+    margin-left: 75px;
+    font-weight: 600;
+    font-size: large;
+}
 
 .menu{
     background-color: #D9D9D9;
@@ -33,8 +60,7 @@
     width: 100%;
     height: 8%;
     margin-top: 0%;
-    padding: 0;
-    
+    padding: 0;    
 }
 
 .menu ul{
