--- a/src/app/Pages/configs/configs.component.html
+++ b/src/app/Pages/configs/configs.component.html
@@ -26,7 +26,7 @@
                 <th>Remove</th>
                 <th>Name</th>
                 <th>Algorithm</th>
-                <th>Creaton date</th>
+                <th>Creation date</th>
             </tr>
         </thead>
         <tbody>
