--- a/src/app/Pages/groups/new-group/new-group.component.scss
+++ b/src/app/Pages/groups/new-group/new-group.component.scss
@@ -1,3 +1,4 @@
+
 .topBar{
     width: 100%;
     height: 3%;
@@ -72,15 +73,61 @@
     background-color: #AAAAAA;
 }
 
-/*
-.content{
-    display: block;
-    position: absolute;
-    bottom: 0;
-    height: 89%;
-    width: 100%;
+.table{
+    width: 30%;
+    margin-top: 1%;
+    margin-right: 10%;
+    border-collapse: collapse; 
+    border-radius: 15px;
+    overflow: hidden;
+    height: 500px;
 }
-*/
+
+.table-addComputer
+{
+    width: 30%;
+    max-height: 300px;
+    border-collapse: collapse;
+    overflow-y: auto;
+    margin-left: -100px;
+    tr
+    {
+        background-color: #4B93FF;
+        padding: 15px;
+    }
+    td
+    {
+        text-align: left;        
+    }
+}
+
+.table-addConfig
+{
+    width: 30%;
+    max-height: 300px;
+    margin-left: 300px;
+    border-collapse: collapse;
+    overflow-y: auto;
+    margin-left: -100px;
+    tr
+    {
+        background-color: #4B93FF;
+        padding: 15px;
+    }
+    td
+    {
+        text-align: left;        
+    }
+}
+
+caption{
+    caption-side: top;
+    text-align: middle;
+    padding-left: 10px;
+    background-color: #4B93FF;
+    color: black;
+    font-size: larger;
+}
 
 
 .GroupName{
@@ -89,7 +136,7 @@
     margin-top: 22px;
 }
 
-.NewGroupLabel{
+.EditLabel{
     text-align: center;
     font-weight: 600;
     background-color: #AAAAAA;
@@ -105,6 +152,7 @@
     border-collapse: collapse; 
     border-radius: 15px;
     overflow: hidden;
+    max-height: 400px; 
 }
 
 caption{
@@ -119,6 +167,7 @@ caption{
 .table-container {
   height: 600px;
   overflow: auto;
+  display: flex;
 }
 
 table {
@@ -192,7 +241,6 @@ table i{
     margin-left: 25px;
     width: 300px;
     color: black;
-    background-color: #D9D9D9;
     font-weight: 600;
     border: 2px solid black;
 }
@@ -271,7 +319,6 @@ table i{
     margin-left: 25px;
     width: 300px;
     color: black;
-    background-color: #D9D9D9;
     font-weight: 600;
     border: 2px solid black;
 }
@@ -327,7 +374,7 @@ table i{
     font-weight: 600;
     margin-bottom: 40px;
     border: 2px solid black;
-    background-color: #D9D9D9;
+    background-color: #AAAAAA;
 }
 
 .buttons button{
@@ -338,4 +385,114 @@ table i{
     margin-bottom: 40px;
     border: 2px solid black;
     background-color: #D9D9D9;
+}
+
+.bi-trash3 {
+    font-size: 16px !important;
+  }
+
+
+.CONFIGname {
+    margin-left: 1200px;
+  }
+  
+  .CONFIGname table {
+    width: 75%;
+    margin-top: 110px;
+    margin-right: 10%;
+    border-collapse: collapse;
+    border-radius: 15px;
+    overflow: auto; 
+    max-height: 400px; 
+    background-color: #D9D9D9;
+  }
+  
+  .CONFIGname table thead {
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    background-color: #4B93FF;
+  }
+  
+  .CONFIGname caption {
+    caption-side: top;
+    text-align: left;
+    padding-left: 10px;
+    background-color: #4B93FF;
+    color: black;
+    font-size: larger;
+    font-weight: 600;
+  }
+  
+  .CONFIGname th {
+    background-color: #4B93FF;
+    color: black;
+    font-weight: 600;
+    padding: 10px;
+  }
+  
+  .CONFIGname td {
+    padding: 10px;
+    text-align: center;
+  }
+  
+  .CONFIGname .btn-link {
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .COMPUTERname {
+    margin-left: 500px;
+    margin-top: -490px;
+  }
+  
+  .COMPUTERname table {
+    width: 500px;
+    border-collapse: collapse;
+    overflow: auto; 
+    max-height: 400px; 
+    background-color: #D9D9D9;
+  }
+  
+  .COMPUTERname table thead {
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    background-color: #4B93FF;
+  }
+  
+  .COMPUTERname caption {
+    text-align: left;
+    padding-left: 10px;
+    background-color: #4B93FF;
+    color: black;
+    font-size: larger;
+  }
+  
+  .COMPUTERname th {
+    background-color: #4B93FF;
+    color: black;
+    font-weight: 600;
+    padding: 10px;
+  }
+  
+  .COMPUTERname td {
+    padding: 10px;
+    text-align: center;
+  }
+  
+  .COMPUTERname .btn-link {
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
+
+ .Changes{
+    width: fit-content;
+    float: right;
+    margin-left: 860px;
+    margin-top: 500px;
 }
